--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-content>
 
-  <div class="container top" [hidden]= "Keyboard.isVisible">
+  <div class="container top" [hidden]= "keyboard.isVisible">
     <ion-segment (ionChange)="segmentChanged($event)" value="login">
       <ion-segment-button value="login">
         <ion-label>Login</ion-label>
@@ -17,11 +17,11 @@
         <span>LOGIN</span>
 
         <ion-item class="ion-margin-top" lines="none">
-          <ion-input type="email" placeholder="E-mail" ></ion-input>
+          <ion-input type="email" placeholder="E-mail" [(ngModel)]='userLogin.email' ></ion-input>
         </ion-item>
 
         <ion-item class="ion-margin-top" lines="none">
-          <ion-input type="password" placeholder="Senha" ></ion-input>
+          <ion-input type="password" placeholder="Senha" [(ngModel)]='userLogin.password'></ion-input>
         </ion-item>
 
         <ion-button class="ion-margin-top" (click)="login()" color="light" expand="block">
@@ -39,11 +39,11 @@
         </ion-item>
 
         <ion-item class="ion-margin-top" lines="none">
-          <ion-input type="email" placeholder="E-mail" ></ion-input>
+          <ion-input type="email" placeholder="E-mail" [(ngModel)]='userRegister.email'></ion-input>
         </ion-item>
 
         <ion-item class="ion-margin-top" lines="none">
-          <ion-input type="password" placeholder="Senha" ></ion-input>
+          <ion-input type="password" placeholder="Senha" [(ngModel)]='userRegister.password'></ion-input>
         </ion-item>
 
         <ion-button class="ion-margin-top" (click)="register()" color="light" expand="block">
