--- a/src/app/pages/contato/contato.page.html
+++ b/src/app/pages/contato/contato.page.html
@@ -1,12 +1,30 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>contato</ion-title>
+    <ion-title class="titulo" >Contato</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+ <ion-app>
+    
 
-<ion-content>
+    <ion-content fullscreen>
+      <ion-list>
+        <ion-list-header>
+        </ion-list-header>
 
-</ion-content>
+        <ion-item>
+          <ion-avatar slot="start">
+            <img src="https://image.freepik.com/vetores-gratis/imagem-de-perfil-de-personagem-de-desenho-animado-avatar-jovem_18591-55058.jpg">
+          </ion-avatar>
+          <ion-label>
+            <h2>Maciel</h2>
+            <h3>(61)99370-2537</h3>
+            <p>maciel.1997@hotmai.com</p>
+          </ion-label>
+        </ion-item>
+
+        
+      </ion-list> 
+    </ion-content>
