--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -1,11 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button menu="main-menu"></ion-menu-button>
+      <ion-buttons slot="start">
+        <ion-back-button defaultHref="home"></ion-back-button>
+      </ion-buttons>
     
     </ion-buttons>
 
-    <ion-title>Cadastro de EPIs</ion-title>
+    <ion-title class="titulo" >Cadastrar Produto</ion-title>
   </ion-toolbar>
 </ion-header>
 
