--- a/src/app/pages/sobre/sobre.page.html
+++ b/src/app/pages/sobre/sobre.page.html
@@ -1,12 +1,29 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>sobre</ion-title>
+    <ion-title class="titulo">Sobre</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-app>
+  <ion-header translucent>
+    <ion-toolbar>
+      <ion-title>Card</ion-title>
+    </ion-toolbar>
+  </ion-header>,
+  <ion-content fullscreen>
+    <ion-card>
+      <img src="https://pulpo.work/wp-content/uploads/2018/02/MSA_Gest%C3%A3o-do-conhecimento.jpg" />
+      <ion-card-header>
+        <ion-card-subtitle>Descrição</ion-card-subtitle>
+        <ion-card-title>Informações</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        Esse Aplicativo foi desenvolvido pelo estudante Maciel de Andrade Santos, do curso análise e desenvolvimento de Sistemas no Centro Universitario de Brasilia (UDF).
+        O aplicativo foi desenvolvido com base nas aulas de Dispositivos Moveis ministrada pelo Professor: Paulo Mergulhão.
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
+</ion-app>
