--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -3,12 +3,12 @@ ion-slides {
 
     .slide-inner {
         width: 75%;
-        color: rgb(160, 223, 88);
-        background-color: #1f9e63;
-        border-radius: 10px;
+        color: rgb(9, 10, 8);
+        background-color: #36517a;
+        border-radius: 20px;
 
         ion-item {
-            --background: rgba(243, 219, 219, 0.2);
+            --background: rgba(226, 241, 241, 0.2);
             --border-radius: 10px;
 
             ion-input {
@@ -16,4 +16,11 @@ ion-slides {
             }
         }
     }
+}
+ion-content{
+    --height:100%;
+    --min-width: 100%;
+    background-position: center top;
+    --background: url("https://tgnsistemas.com/wp-content/uploads/2017/09/Websites-TGN-Sistemas-Fundo-Login.jpg");
+    --background-size: 100% 100%;
 }
